fix background bug on IOS mobile

--- a/css/style.default.css
+++ b/css/style.default.css
@@ -2392,7 +2392,7 @@ code {
 }
 
 @media (max-width:640px) {
-  section {
+jumbotron {
     background-attachment:initial;
   }
 }
